--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,3 +13,13 @@
 }
 
 [x-cloak] { display: none !important; }
+
+#applicant-form {
+    position: relative;
+    z-index: 2;
+}
+
+#map {
+    z-index: 1;
+    height: 400px;
+}
